<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numtext2"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:hint="@string/numtext2"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/numtext1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/numtext1"
        app:layout_constraintTop_toBottomOf="@+id/numtext1" />

    <TextView
        android:id="@+id/apptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/numtext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/speed_meter" />

    <EditText
        android:id="@+id/numtext1"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:hint="@string/numtext1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/numtext2"
        app:layout_constraintEnd_toEndOf="@+id/apptext"
        app:layout_constraintStart_toStartOf="@+id/apptext"
        app:layout_constraintTop_toBottomOf="@+id/apptext" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numtext2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/textView1"
        android:textColor="#FF213B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

</androidx.constraintlayout.widget.ConstraintLayout>